[package]
name = "isotp"
version = "0.1.0"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
libc = "0.2"
nix = "0.16"
socketcan = "1.7"