[package]
name = "socketcan-isotp"
version = "1.0.2"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "A common application of ISO-TP or ISO 15762-2 is for example Unified Diagnostic Services (UDS) used in automotive ECUs for diagnostics."
readme = "README.md"
homepage = "https://github.com/marcelbuesing/socketcan-isotp"
repository = "https://github.com/marcelbuesing/socketcan-isotp.git"
keywords = ["can", "socketcan", "iso-tp", "isotp", "iso-15762-2"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bitflags = "2.3"
embedded-can = "0.4"
libc = "0.2"
nix = "0.26"
thiserror = "1.0"
